--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.datasource.password=1
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.order_by.default_null_ordering=last
 
 spring.mvc.hiddenmethod.filter.enabled=true
