--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.order_by.default_null_ordering=last
 
 spring.mvc.hiddenmethod.filter.enabled=true
+
+
+page.config.rowsInPage=5
