--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,7 @@ spring.jpa.properties.hibernate.order_by.default_null_ordering=last
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+server.port=808
 
+rating.max.size=20
 page.config.rowsInPage=5
