--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,4 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 server.port=8080
 
-rating.max.size=20
-page.config.rowsInPage=5
+rating.max.workers=20
