finished, no tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.properties.hibernate.order_by.default_null_ordering=last
 
 spring.mvc.hiddenmethod.filter.enabled=true
 
+server.servlet.session.timeout=15m
+
 server.port=8080
 
 rating.max.workers=20
